move tools.js to lib

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>Javascript Tools Test Page</title>
   <meta charset="UTF-8">
-  <script src="tools.js"></script>
+  <script src="lib/tools.js"></script>
 </head>
 
 <body>
