--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <div id="qunit-fixture"></div>
   <script src="https://code.jquery.com/qunit/qunit-1.22.0.js"></script>
   <script src="tools.js"></script>
+  <script src="tools-itr.js"></script>
   <script src="qunit-tools.js"></script>
   <script src="tests.js"></script>
 </body>
